# fitness

./: com.github.pablo_s.fitness.json  meson.build
data/: com.github.pablo_s.fitness.appdata.xml.in  com.github.pablo_s.fitness.desktop.in  com.github.pablo_s.fitness.gschema.xml  meson.build
po/: POTFILES  meson.build
src/: activity.py  activity_row.py  activity_row.ui  fitness.gresource.xml  fitness.in  history.py  history.ui  main.py  meson.build  record_activity_dialog.py  record_activity_dialog.ui  window.py  window.ui
